# goderash

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
compliance/templates/soc2/: README.md
docs/: README.md  architecture.md  concepts.md  deployment.md  quickstart.md  security.md
docs/adapters/: langgraph.md
examples/claude-sdk-agent/: README.md  run.py
examples/golden_path/: demo.py  quickstart.sh
examples/langgraph-agent/: README.md  agent.py  pyproject.toml
examples/openai-assistant/: README.md  run.py
infra/docker/: Dockerfile.core  docker-compose.yml
infra/k8s/: README.md  configmap.yaml  core.yaml  dashboard.yaml  ingress.yaml  kustomization.yaml  migrations.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.example.yaml
infra/terraform/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
python/core/: README.md  alembic.ini  pyproject.toml
python/core/src/goderash_core/: __init__.py  config.py  db.py  email.py  main.py  ratelimit.py
python/core/src/goderash_core/api/: __init__.py  auth.py  auth_public.py  billing.py  invites.py  orgs.py  packs.py  routes.py  webhooks.py  whatif.py
python/core/src/goderash_core/billing/: __init__.py  service.py  usage.py
python/core/src/goderash_core/contracts/: __init__.py  contract.py  enforcer.py
python/core/src/goderash_core/events/: __init__.py  types.py
python/core/src/goderash_core/ledger/: __init__.py  chain.py  store.py  upcast.py
python/core/src/goderash_core/migrations/: env.py
python/core/src/goderash_core/migrations/versions/: 0001_initial.py  0002_users_and_memberships.py  0003_billing_and_webhooks.py  0004_auth_extensions.py
python/core/src/goderash_core/models/: __init__.py  auth_tokens.py  event.py  tenant.py  user.py
python/core/src/goderash_core/packs/: __init__.py  base.py  ffiec.py  finra.py  hipaa.py  soc2.py
python/core/src/goderash_core/scripts/: __init__.py  seed.py
python/core/src/goderash_core/security/: __init__.py  passwords.py  revocation.py  tokens.py
python/core/src/goderash_core/webhooks/: __init__.py  dispatcher.py
python/core/src/goderash_core/whatif/: __init__.py  projector.py
python/core/tests/: conftest.py
python/core/tests/eval/: conftest.py  test_golden_chain.py  test_soc2_controls.py  test_upcaster_stability.py  test_whatif_golden.py
python/core/tests/integration/: test_auth_ext.py  test_auth_signup.py  test_ingest_and_verify.py  test_invites.py
python/core/tests/unit/: test_billing_usage.py  test_chain.py  test_contracts.py  test_events.py  test_pack_registry.py  test_passwords.py  test_soc2_pack.py  test_tokens.py  test_upcast.py  test_webhooks.py  test_whatif.py
python/goderash_adapter_anthropic/: README.md  pyproject.toml
python/goderash_adapter_anthropic/src/goderash_adapter_anthropic/: __init__.py  messages.py
python/goderash_adapter_anthropic/tests/: test_wrap_anthropic.py
python/goderash_adapter_langgraph/: README.md  pyproject.toml
python/goderash_adapter_langgraph/src/goderash_adapter_langgraph/: __init__.py  callback.py
python/goderash_adapter_openai/: README.md  pyproject.toml
python/goderash_adapter_openai/src/goderash_adapter_openai/: __init__.py  assistants.py  wrapper.py
python/goderash_adapter_openai/tests/: test_audit_assistants_run.py
python/goderash_sdk/: README.md  pyproject.toml
python/goderash_sdk/src/goderash_sdk/: __init__.py  client.py  events.py
python/goderash_sdk/src/goderash_sdk/guards/: __init__.py  budget.py  cancellation.py  chain.py  fraud.py  permission_mode.py  velocity.py
python/goderash_sdk/src/goderash_sdk/wrap/: __init__.py  agent.py  llm.py  tool.py
python/goderash_sdk/tests/: test_client_retry.py  test_guards.py  test_wrap_tool.py
scripts/: dev.sh
