[project]
name = "goderash-example-langgraph"
version = "0.1.0"
description = "Example LangGraph agent with Goderash audit"
requires-python = ">=3.10"

dependencies = [
  "goderash-sdk>=0.1.0",
  "goderash-adapter-langgraph>=0.1.0",
  "langchain-core>=0.3.0",
  "langchain-anthropic>=0.2.0",
  "langgraph>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
goderash-sdk = { workspace = true }
goderash-adapter-langgraph = { workspace = true }
