[project]
name = "goderash-adapter-anthropic"
version = "0.1.0"
description = "Goderash adapter for the Anthropic Python SDK (Messages + tool use)"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
  "goderash-sdk>=0.1.0",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goderash_adapter_anthropic"]
