[project]
name = "goderash-adapter-langgraph"
version = "0.1.0"
description = "LangGraph callback that emits Goderash audit events"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
  "goderash-sdk>=0.1.0",
  "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "langgraph>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goderash_adapter_langgraph"]
