[project]
name = "goderash-adapter-langgraph"
version = "0.1.1"
description = "LangGraph / LangChain callback that emits Goderash audit events — tamper-evident, hash-chained, regulator-ready."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Goderash", email = "eng@goderash.com" }]
readme = "README.md"
keywords = [
  "ai",
  "ai-agent",
  "langchain",
  "langgraph",
  "callback",
  "audit",
  "compliance",
  "governance",
  "soc2",
  "hipaa",
  "ledger",
  "observability",
  "llm",
  "llmops",
  "goderash",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]

dependencies = [
  "goderash-sdk>=0.1.0",
  "langchain-core>=0.3.0",
]

[project.urls]
Homepage      = "https://ai.goderash.com"
Documentation = "https://github.com/goderash/goderash#readme"
Repository    = "https://github.com/goderash/goderash"
Issues        = "https://github.com/goderash/goderash/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "langgraph>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goderash_adapter_langgraph"]
