[project]
name = "goderash-adapter-openai"
version = "0.1.1"
description = "Goderash adapter for the OpenAI Python SDK (Chat + Responses + Assistants) — tamper-evident, hash-chained, regulator-ready."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Goderash", email = "eng@goderash.com" }]
readme = "README.md"
keywords = [
  "ai",
  "ai-agent",
  "openai",
  "assistants",
  "chat-completions",
  "responses",
  "audit",
  "compliance",
  "governance",
  "soc2",
  "hipaa",
  "ledger",
  "observability",
  "llm",
  "llmops",
  "tool-calling",
  "goderash",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]

dependencies = [
  "goderash-sdk>=0.1.0",
  "openai>=1.50.0",
]

[project.urls]
Homepage      = "https://ai.goderash.com"
Documentation = "https://github.com/goderash/goderash#readme"
Repository    = "https://github.com/goderash/goderash"
Issues        = "https://github.com/goderash/goderash/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goderash_adapter_openai"]
