[project]
name = "goderash-sdk"
version = "0.1.0"
description = "Goderash SDK — audit any AI agent with one import"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Goderash", email = "eng@goderash.com" }]
readme = "README.md"
keywords = ["ai", "agents", "audit", "compliance", "governance", "soc2", "hipaa"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
dependencies = [
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
]

[project.urls]
Homepage    = "https://goderash.com"
Repository  = "https://github.com/goderash/goderash"
Issues      = "https://github.com/goderash/goderash/issues"
Changelog   = "https://github.com/goderash/goderash/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
  "ruff>=0.6.9",
  "black>=24.10.0",
  "mypy>=1.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goderash_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
